WIP: glmm diagnostics and inference

--- a/reports/exploringData.Rmd
+++ b/reports/exploringData.Rmd
@@ -1,6 +1,9 @@
 ---
-title: "Exploring data sets for modelling"
-output: html_document
+title: "Exploring data sets for modeling"
+output: 
+  html_document:
+    toc: true
+    toc_float: true
 editor_options: 
   chunk_output_type: console
 ---
@@ -8,9 +11,9 @@ editor_options:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(here)
+library(tidyverse)
 library(summarytools)
 library(DataExplorer)
-library(ggplot2)
 ```
 
 ```{r}
